@@ -1,8 +1,10 @@
 0.223 2023-10-11
   [Test Improvement]
-    * Improve tests for IO::Socket::UNIT.
+    * Improve tests for IO::Socket::UNIX.
   [Internal Changes]
     * IO::Socket::UNIX#option_names becomes protected method.
+  [Document Improvement]
+    * Add docs for IO::Socket::UNIX.
 0.222 2023-10-10
   [Internal Changes]
     * Remove IO::File#configure method.
